Fix the width of body that was overflowing the viewport

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,20 +1,21 @@
-body {
-    height: 100vh;
+html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     background-color: #1E1E1E;
     font-family: 'Arial', sans-serif;
+    box-sizing: border-box;
 }
 
 .app-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     padding: 20px;
-    max-width: 480px;
     margin: auto;
     background-image: radial-gradient(
         farthest-corner at 100px 100px,
@@ -147,4 +148,8 @@ body {
 iframe {
     filter: invert(90%) hue-rotate(180deg) contrast(95%);
     border: none;
+}
+
+* {
+    box-sizing: inherit;
 }
